// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> ColorVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag colorNeutral typography sizeSm colorNeutral weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorWarning typography sizeSm colorWarning weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorBrand typography sizeSm colorBrand weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorAlert typography sizeSm colorAlert weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorYellow typography sizeSm weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorSuccess typography sizeSm colorSuccess weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
</div>
`;

exports[`<Tag /> Default story renders snapshot 1`] = `
<span
  class="tag colorWarning typography sizeSm colorWarning weightBold spacingNone"
>
  ​
  <span
    class="body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> OutlineVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag colorNeutral outline typography sizeSm colorNeutral weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorWarning outline typography sizeSm colorWarning weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorBrand outline typography sizeSm colorBrand weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorAlert outline typography sizeSm colorAlert weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorYellow outline typography sizeSm weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorSuccess outline typography sizeSm colorSuccess weightBold spacingNone"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
</div>
`;

exports[`<Tag /> WithIcon story renders snapshot 1`] = `
<span
  class="tag colorWarning typography sizeSm colorWarning weightBold spacingNone"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="1"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  ​
  <span
    class="body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> WithLongTextAndIcon story renders snapshot 1`] = `
<span
  class="tag colorWarning typography sizeSm colorWarning weightBold spacingNone"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="2"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  ​
  <span
    class="body"
  >
    This tag has a really long text message
  </span>
</span>
`;
